Changelog
=========

2020.5.0 (unreleased)
---------------------

- Add @role-assignment-reports endpoint to list, add and delete role assignment reports. [tinagerber]
- Overwrite logout API endpoint to also expire the user's cookies. [njohner]
- Translate activities in @notifications endpoint. [njohner]
- Fix contact workflow state variable name. [deiferni]
- Fix contact folder workflow state variable name. [deiferni]
- Expose the current logged in users'email address in the @config endpoint. [elioschmutz]
- Improve design and content of workspace invitation e-mail. [mbaechtold]
- Fix filtering on values containing spaces in listing endpoint. [njohner]
- Add question for `administrator_group` to the policy template. [mbaechtold]
- Add teaser viewlet to promote the new frontend. [tinagerber, njohner]
- Fix loading of more items in contenttree widget for toplevel items. [buchi]
- Add UserSnap API key to registry. [njohner]

2020.4.1 (2020-07-09)
---------------------

- Fix update mail filename upgrade step. [njohner]


2020.4.0 (2020-07-02)
---------------------

- Improve check if solr has started to prevent an issue during the testserver startup. [sebastianmanger]
- Make creating favorites more robust in case of workflow issues. [deiferni]
- Improve response history for (automatically) opened subtasks in sequential task templates. [mbaechtold]
- Fix contenttree.js so that it is also supported by IE. [njohner]
- Expose the url to the user's private folder in the `@config` API endpoint. Serves as feature flag too. [mbaechtold]
- Also allow replacing concrete responsibles with interactive responsibles when triggering task templates. [deiferni]
- Remove cross-tab logout functionality. [lgraf]
- Add @@logout view to clear Plone session and redirect to CAS logout if necessary. [lgraf]
- Introduce a new property `touched` on dossiers. [mbaechtold]
- Add support for metadata_fields in OpengeverRealContentListingObject. [njohner]