@@ -61,7 +61,7 @@ cssutils = 1.0.2
 cx-Oracle = 5.1.3
 dataflake.fakeldap = 2.1
 distribute = 0.7.3
-docxcompose = 1.1.2
+docxcompose = 1.2.0
 enum34 = 1.1.6
 et-xmlfile = 1.0.1
 five.pt = 2.2.5
